<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cart_preview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context="com.nicholasward.reckers.CartPreviewActivity">

    <!-- order cost -->
    <TextView
        android:id="@+id/payment_subtotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkout_subtotal"/>
    <TextView
        android:id="@+id/payment_tax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkout_tax"/>
    <TextView
        android:id="@+id/payment_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkout_total"/>

    <!-- cart navigation -->
    <Button
        android:id="@+id/continue_ordering"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="continueOrderingClicked"
        android:text="@string/continue_ordering"/>
    <Button
        android:id="@+id/proceed_to_checkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="proceedToCheckoutClicked"
        android:text="@string/proceed_to_checkout"/>

</LinearLayout>
